Update compose file to use the image from Docker Hub.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   draw:
-    build: .
+    image: mujahidkhaleel/python-diagrams:1.0.0
     tty: true
     volumes:
        - .:/work/
