--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
       id: extract_branch
 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag python-diagrams:develop
+      run: docker build . --file Dockerfile --tag python-diagrams
 
     - name: Publish to Docker Hub Registry
       uses: elgohr/Publish-Docker-Github-Action@master
@@ -24,4 +24,4 @@ jobs:
         name: mujahidkhaleel/python-diagrams
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        tags: "${{ steps.extract_branch.outputs.branch }}"
+        tags: "${{ steps.extract_branch.outputs.branch }}, latest"
