--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   draw:
-    image: mujahidkhaleel/python-diagrams:1.0.0
+    image: mujahidkhaleel/python-diagrams
     tty: true
     volumes:
        - .:/work/
